--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "require": {
         "php": "^7.3",
-        "dealerdirect/phpcodesniffer-composer-installer": "^0.6",
+        "dealerdirect/phpcodesniffer-composer-installer": "~0.6",
         "slevomat/coding-standard": "^6.1",
         "squizlabs/php_codesniffer": "^3.5",
         "webimpress/coding-standard": "^1.1"
