--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "rss": "https://github.com/opsway/psr12-strict-modern-standart/releases.atom"
     },
     "require": {
-        "php": "^7.3",
+        "php": "^7.3 || ^8.0",
         "dealerdirect/phpcodesniffer-composer-installer": "~0.6",
         "slevomat/coding-standard": "^6.1",
         "squizlabs/php_codesniffer": "^3.5",
