--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require": {
         "php": "^7.3 || ^8.0",
         "dealerdirect/phpcodesniffer-composer-installer": "~0.6",
-        "slevomat/coding-standard": "^6.1",
+        "slevomat/coding-standard": "^6.1 || ^7.0",
         "squizlabs/php_codesniffer": "^3.5",
         "webimpress/coding-standard": "^1.1"
     },
