--- a/composer.json
+++ b/composer.json
@@ -15,16 +15,20 @@
         "rss": "https://github.com/opsway/psr12-strict-modern-standart/releases.atom"
     },
     "require": {
-        "php": "^7.3 || ^8.0",
-        "dealerdirect/phpcodesniffer-composer-installer": "~0.6",
-        "slevomat/coding-standard": "^6.1 || ^7.0",
-        "squizlabs/php_codesniffer": "^3.5",
-        "webimpress/coding-standard": "^1.1"
+        "php": "^8.0",
+        "dealerdirect/phpcodesniffer-composer-installer": "~0.7",
+        "slevomat/coding-standard": "^7.0 || ^8.0",
+        "squizlabs/php_codesniffer": "^3.6 || ^4.0",
+        "webimpress/coding-standard": "^1.2"
+    },
+    "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "0.0.x-dev",
-            "dev-develop": "1.0.x-dev"
+            "dev-develop": "2.0.x-dev"
         }
     },
     "autoload": {
