--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "require": {
         "php": "^8.0",
-        "dealerdirect/phpcodesniffer-composer-installer": "~0.7",
+        "dealerdirect/phpcodesniffer-composer-installer": "~0.7 || ^1.0",
         "slevomat/coding-standard": "^7.0 || ^8.0",
         "squizlabs/php_codesniffer": "^3.6 || ^4.0",
         "webimpress/coding-standard": "^1.2"
